Spelling error in pt-BR

--- a/Extensions/full-screen/src/resources/locales/pt-BR.json
+++ b/Extensions/full-screen/src/resources/locales/pt-BR.json
@@ -103,7 +103,7 @@
             "artist": "Arte do Artista"
         },
         "extraControls": "Controles Extras",
-        "upnextDisplay": "Exibição da Próxima Músuica",
+        "upnextDisplay": "Exibição da Próxima Música",
         "contextDisplay": {
             "setting": "Exibição do Contexto",
             "always": "Sempre",
